[workspace]
members = [
    "synths",
    "songs/*",
]

[profile.dev]
debug = false
debug-assertions = false

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false

[patch.crates-io]
# euphony = { path = "../euphony-rs/euphony" }
euphony = { git = "https://github.com/camshaft/euphony-rs" }
euphony-build = { git = "https://github.com/camshaft/euphony-rs" }
