[workspace]
members = ["common", "lean-sneeze", "hesitant-smoke", "placid-lace", "misty-spiders", "taboo-plate"]

[profile.euphony]
inherits = "dev"
debug = false
lto = "off"

[profile.euphony.package."*"]
opt-level = 3

[profile.euphony.build-override]
opt-level = 3

# [patch.crates-io]
# euphony = { path = "../euphony-rs/euphony" }
